# netinfo

./: LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
src/netinfo/: main.py
